Refactoring, changed from instance variables in GameState